[package]
name = "qa-deploy-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.17", features = ["derive"]}
reqwest = { version = "0.11", features = ["json", "blocking"] }
zip = { version = "0.6.3", default-features = false }