[package]
name = "qa-deploy-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.17", features = ["derive"]}
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking", "gzip"] }
serde_json = "1.0"
